--- a/src/pocketmine/lang/locale/eng.ini
+++ b/src/pocketmine/lang/locale/eng.ini
@@ -9,7 +9,7 @@ language.selected=Selected {%0} ({%1}) as the base language
 multiplayer.player.joined={%0} joined the game
 multiplayer.player.left={%0} left the game
 
-chat.type.text=<{%0}> {%1}
+chat.type.text={%0} : {%1}
 chat.type.emote=* {%0} {%1}
 chat.type.announcement=[{%0}] {%1}
 chat.type.admin=[{%0}: {%1}]
@@ -89,13 +89,10 @@ commands.time.added=Added {%0} to the time
 commands.time.set=Set the time to {%0}
 commands.time.query=Time is {%0}
 
-commands.me.usage=/me <action ...>
-
 commands.give.item.notFound=There is no such item with name {%0}
 commands.give.success=Given {%0} * {%1} to {%2}
 commands.give.tagError=Data tag parsing failed: {%0}
 
-commands.effect.usage=/effect <player> <effect> [seconds] [amplifier] [hideParticles] OR /effect <player> clear
 commands.effect.notFound=There is no such mob effect with ID {%0}
 commands.effect.success=Given {%0} (ID {%1}) * {%2} to {%3} for {%4} seconds
 commands.effect.success.removed=Took {%0} from {%1}
@@ -108,78 +105,54 @@ commands.enchant.noItem=The target is not holding an item
 commands.enchant.notFound=There is no such enchantment with ID {%0}
 commands.enchant.success=Enchanting succeeded
 commands.enchant.cantEnchant=The selected enchantment can't be added to the target item
-commands.enchant.usage=/enchant <player> <enchantment ID> [level]
 commands.particle.success=Playing effect {%0} for {%1} times
 commands.particle.notFound=Unknown effect name {%0}
-commands.players.usage=/list
 commands.players.list=There are {%0}/{%1} players online:
 commands.kill.successful=Killed {%0}
 commands.banlist.ips=There are {%0} total banned IP addresses:
 commands.banlist.players=There are {%0} total banned players:
 commands.banlist.cids=There are {%0} total banned CIDs:
-commands.banlist.usage=/banlist [ips|players|cids]
-commands.defaultgamemode.usage=/defaultgamemode <mode>
 commands.defaultgamemode.success=The world's default game mode is now {%0}
 
 commands.op.success=Opped {%0}
-commands.op.usage=/op <player>
 
 commands.deop.success=De-opped {%0}
-commands.deop.usage=/deop <player>
 
-commands.say.usage=/say <message ...>
-
-commands.seed.usage=/seed
 commands.seed.success=Seed: {%0}
 
 commands.bancidbyname.success=Banned player {%0}'s CID
-commands.bancidbyname.usage=/bancidbyname <player>
 
 commands.bancid.success=Banned CID {%0}
-commands.bancid.usage=/bancid <ClientID>
 
-commands.unbancid.usage=/pardoncid <ClientID>
 commands.unbancid.success=Unbanned CID {%0}
 
 commands.ban.success=Banned player {%0}
-commands.ban.usage=/ban <name> [reason ...] [time(day)]
 
 commands.unban.success=Unbanned player {%0}
-commands.unban.usage=/pardon <name>
 
 commands.banip.invalid=You have entered an invalid IP address or a player that is not online
 commands.banip.success=Banned IP address {%0}
 commands.banip.success.players=Banned IP address {%0} belonging to {%1}
-commands.banip.usage=/ban-ip <address|name> [reason ...]
 
 commands.unbanip.invalid=You have entered an invalid IP address
 commands.unbanip.success=Unbanned IP address {%0}
-commands.unbanip.usage=/pardon-ip <address>
 
 commands.banipbyname.success=Banned player {%0}'s IP
-commands.banipbyname.usage=/banipbyname <player>
 
-commands.save.usage=/save-all
-commands.save-on.usage=/save-on
-commands.save-off.usage=/save-off
 commands.save.enabled=Turned on world auto-saving
 commands.save.disabled=Turned off world auto-saving
 commands.save.start=Saving...
 commands.save.success=Saved the world
 
-commands.setblock.usage=/setblock <x> <y> <z> <BlockName> [damage]
 command.setblock.invalidBlock=Invalid block name/ID
 
-commands.stop.usage=/stop
 commands.stop.start=Stopping the server
 
 commands.kick.success=Kicked {%0} from the game
 commands.kick.success.reason=Kicked {%0} from the game: '{%1}'
-commands.kick.usage=/kick <player> [reason ...]
 
 commands.tp.success=Teleported {%0} to {%1}
 commands.tp.success.coordinates=Teleported {%0} to {%1}, {%2}, {%3}
-commands.tp.usage=/tp [target player] <destination player> OR /tp [target player] <x> <y> <z> [<y-rot> <x-rot>]
 
 commands.whitelist.list=There are {%0} (out of {%1} seen) whitelisted players:
 commands.whitelist.enabled=Turned on the whitelist
@@ -189,31 +162,22 @@ commands.whitelist.add.success=Added {%0} to the whitelist
 commands.whitelist.add.usage=/whitelist add <player>
 commands.whitelist.remove.success=Removed {%0} from the whitelist
 commands.whitelist.remove.usage=/whitelist remove <player>
-commands.whitelist.usage=/whitelist <on|off|list|add|remove|reload>
 
-commands.gamemode.success.self=Set own game mode to {%0}
-commands.gamemode.success.other=Set {%0}'s game mode to {%1}
+commands.gamemode.success.self=Set own game mode to {%2}
+commands.gamemode.success.other=Set {%1}'s game mode to {%2}
 commands.gamemode.usage=/gamemode <mode> [player]
 commands.help.header=--- Showing help page {%0} of {%1} (/help <page>) ---
-commands.help.usage=/help [page|command name]
-commands.message.usage=/tell <player> <private message ...>
 commands.message.sameTarget=You can't send a private message to yourself!
 
-commands.difficulty.usage=/difficulty <new difficulty>
 commands.difficulty.success=Set game difficulty to {%0}
 
-commands.spawnpoint.usage=/spawnpoint [player] [<x> <y> <z>]
 commands.spawnpoint.success=Set {%0}'s spawn point to ({%1}, {%2}, {%3})
-commands.setworldspawn.usage=/setworldspawn [<x> <y> <z>]
 commands.setworldspawn.success=Set the world spawn point to ({%0}, {%1}, {%2})
-
-commands.summon.usage=/summon [entity] [<x> <y> <z>] [NBTTag]
 
 commands.xp.failure.withdrawXp=Cannot give player negative experience points
 commands.xp.success=Given {%0} experience to {%1}
 commands.xp.success.levels=Given {%0} levels to {%1}
 commands.xp.success.negative.levels=Taken {%0} levels from {%1}
-commands.xp.usage=/xp <amount> [player] OR /xp <amount>L [player]
 
 # -------------------- PocketMine language files, only for console --------------------
 pocketmine.data.playerNotFound=Player data not found for "{%0}", creating new profile
@@ -235,10 +199,11 @@ pocketmine.server.networkStart=Opening server on {%0}:{%1}
 pocketmine.server.info=This server is running {%0}{%1} "{%2}" (API {%3})
 
 pocketmine.server.info.extended.title=-----Server information-----
-pocketmine.server.info.extended1=This server is running {%0}{%1} (codename "{%2}")
+pocketmine.server.info.extended1=This server is running {%0}{%1} {%2}
 pocketmine.server.info.extended2=PHP version: {%0}
-pocketmine.server.info.extended3=API: {%0} (iTX API version {%1})
-pocketmine.server.info.extended4=Target client: Minecraft PE {%0} (protocol version {%1})
+pocketmine.server.info.extended3=API: {%0}
+pocketmine.server.info.extended4=Target client: Minecraft PE {%0}
+pocketmine.server.info.extended5=Protocol version: {%0}
 
 pocketmine.server.license={%0} is distributed under the GPL License version 3 and later
 pocketmine.server.tickOverload=Can't keep up! Is the server overloaded?
@@ -311,11 +276,13 @@ pocketmine.command.gc.memory=Release memory:
 
 pocketmine.command.biome.description=Change the biome of the area.(To change snow or rain)
 pocketmine.command.biome.posset=Set position {%3} at ({%1},{%2}) in level {%0}
-pocketmine.command.biome.get=The ID of biome you are in is {%0}.
+pocketmine.command.biome.get=The ID of biome you are in is {%0}. Color: {%1},{%2},{%3}
 pocketmine.command.biome.wrongLev=Cannot set position in different level.
 pocketmine.command.biome.wrongBio=Wrong ID of biome. e.g. 1 (Plains), 2 (Desert)，13 (Ice Mountains)，6 (Swampland)
+pocketmine.command.biome.wrongCol=Wrong Color. e.g. 146,188,89 .Use "/biome get" to get other color.
 pocketmine.command.biome.noPos=Please use "/biome pos1|pos2" to select the area first.
 pocketmine.command.biome.set=Set the selected area's biome to {%0}
+pocketmine.command.biome.color=Set the grass colour to {%0},{%1},{%2}
 
 pocketmine.command.timings.description=Records timings to see performance of the server.
 pocketmine.command.timings.usage=/timings <reset|report|on|off|paste>
@@ -339,39 +306,72 @@ pocketmine.command.particle.usage=/particle <name> <x> <y> <z> <xd> <yd> <zd> [c
 pocketmine.command.time.description=Changes the time on each world
 pocketmine.command.time.usage=/time <set|add> <value> OR /time <start|stop|query>
 pocketmine.command.bancidbyname.description=Prevents the specified CID by name from using this server
+pocketmine.command.bancidbyname.usage=/bancidbyname <player>
 pocketmine.command.bancid.description=Prevents the specified CID from using this server
+pocketmine.command.bancid.usage=/bancid <ClientID>
 pocketmine.command.banipbyname.description=Prevents the specified IP address by name from using this server
+pocketmine.command.banipbyname.usage=/banipbyname <player>
 pocketmine.command.ban.player.description=Prevents the specified player from using this server
-pocketmine.command.ban.ip.description=Prevents the specified IP address from using this server
+pocketmine.command.ban.player.ban.usage=/ban <name> [reason ...] [time(day)]
+pocketmine.command.banip.description=Prevents the specified IP address from using this server
+pocketmine.command.banip.usage=/ban-ip <address|name> [reason ...]
 pocketmine.command.banlist.description=View all players banned from this server
+pocketmine.command.banlist.usage=/banlist [ips|players|cids]
 pocketmine.command.defaultgamemode.description=Set the default gamemode
+pocketmine.command.defaultgamemode.usage=/defaultgamemode <mode>
 pocketmine.command.deop.description=Takes the specified player's operator status
+pocketmine.command.op.usage=/op <player>
+pocketmine.command.deop.usage=/deop <player>
 pocketmine.command.difficulty.description=Sets the game difficulty
+pocketmine.command.difficulty.usage=/difficulty <new difficulty>
 pocketmine.command.enchant.description=Adds enchantments on items
+pocketmine.command.enchant.usage=/enchant <player> <enchantment ID> [level]
 pocketmine.command.effect.description=Adds/Removes effects on players
+pocketmine.command.effect.usage=/effect <player> <effect> [seconds] [amplifier] [hideParticles] OR /effect <player> clear
 pocketmine.command.gamemode.description=Changes the player to a specific game mode
+pocketmine.command.gamemode.usage=/gamemode <mode> [player]
 pocketmine.command.help.description=Shows the help menu
+pocketmine.command.help.usage=/help [page|command name]
 pocketmine.command.kick.description=Removes the specified player from the server
+pocketmine.command.kick.usage=/kick <player> [reason ...]
 pocketmine.command.list.description=Lists all online players
+pocketmine.command.players.usage=/list
 pocketmine.command.me.description=Performs the specified action in chat
+pocketmine.command.me.usage=/me <action ...>
 pocketmine.command.op.description=Gives the specified player operator status
 pocketmine.command.unban.cid.description=Allows the specified CID to use this server
+pocketmine.command.unban.cid.usage=/pardoncid <ClientID>
 pocketmine.command.unban.player.description=Allows the specified player to use this server
+pocketmine.command.unban.player.usage=/pardon <name>
 pocketmine.command.unban.ip.description=Allows the specified IP address to use this server
+pocketmine.command.unban.ip.usage=/pardon-ip <address>
 pocketmine.command.save.description=Saves the server to disk
+pocketmine.command.save.usage=/save-all
 pocketmine.command.saveoff.description=Disables server autosaving
+pocketmine.command.saveoff.usage=/save-off
 pocketmine.command.saveon.description=Enables server autosaving
+pocketmine.command.saveon.usage=/save-on
 pocketmine.command.say.description=Broadcasts the given message as the sender
+pocketmine.command.say.usage=/say <message ...>
 pocketmine.command.seed.description=Shows the world seed
+pocketmine.command.seed.usage=/seed
 pocketmine.command.setworldspawn.description=Sets a worlds's spawn point. If no coordinates are specified, the player's coordinates will be used.
+pocketmine.command.setworldspawn.usage=/setworldspawn [<x> <y> <z>]
 pocketmine.command.spawnpoint.description=Sets a player's spawn point
+pocketmine.command.spawnpoint.usage=/spawnpoint [player] [<x> <y> <z>]
 pocketmine.command.stop.description=Stops the server
+pocketmine.command.stop.usage=/stop
 pocketmine.command.tp.description=Teleports the given player (or yourself) to another player or coordinates
+pocketmine.command.tp.usage=/tp [target player] <destination player> OR /tp [target player] <x> <y> <z> [<y-rot> <x-rot>]
 pocketmine.command.tell.description=Sends a private message to the given player
+pocketmine.command.tell.usage=/tell <player> <private message ...>
 pocketmine.command.xp.description=Add experience or experience level to the given player
+pocketmine.command.xp.usage=/xp <amount> [player] OR /xp <amount>L [player]
 pocketmine.command.summon.description=Summons a entity at the player's location or a specific location
+pocketmine.command.summon.usage=/summon [entity] [<x> <y> <z>] [NBTTag]
 pocketmine.command.fill.description=fills a specific selection with blocks
 pocketmine.command.setblock.description=Changes a block to another block
+pocketmine.command.setblock.usage=/setblock <x> <y> <z> <BlockName> [damage]
 
 pocketmine.command.weather.description=Set weather for level
 pocketmine.command.weather.usage=/weather <level-name weather|weather (rain|sunny|clear)>
@@ -382,6 +382,7 @@ pocketmine.command.weather.wrong=Wrong parameters.
 pocketmine.command.weather.invalid.level=Invalid level name.
 
 pocketmine.command.whitelist.description=Manages the list of players allowed to use this server
+pocketmine.command.whitelist.usage=/whitelist <on|off|list|add|remove|reload>
 pocketmine.crash.create=An unrecoverable error has occurred and the server has crashed. Creating a crash dump
 pocketmine.crash.error=Could not create crash dump: {%0}
 pocketmine.crash.submit=Please upload the "{%0}" file to the Crash Archive and submit the link to the Bug Reporting page. Give as much info as you can.
@@ -408,3 +409,5 @@ pocketmine.plugin.commandError=Could not load command {%0} for plugin {%1}
 pocketmine.plugin.aliasError=Could not load alias {%0} for plugin {%1}
 pocketmine.plugin.deprecatedEvent=Plugin '{%0}' has registered a listener for '{%1}' on method '{%2}', but the event is Deprecated.
 pocketmine.plugin.eventError="Could not pass event '{%0}' to '{%1}': {%2} on {%3}
+
+message.bed.sleep.night=You can only sleep at night
