Update CaveCommand(Add Optional parameters)

--- a/src/pocketmine/lang/locale/chs.ini
+++ b/src/pocketmine/lang/locale/chs.ini
@@ -245,7 +245,7 @@ pocketmine.command.alias.illegal=不能注册别名 {%0}，因为它包含非法
 pocketmine.command.alias.notFound=未能登记别称 {%0} ，因为它包含不存在的指令： {%1}
 pocketmine.command.exception=于 {%1} 执行指令 “{%0}“ 时，出现了未被处理的错误： {%2}
 
-pocketmine.commands.cave.usage=/cave <旋转角度> <洞穴长度> <分叉数> <洞穴强度> <X> <Y> <Z> <LevelName> | /cave getmypos
+pocketmine.commands.cave.usage=/cave [<旋转角度> <洞穴长度> <分叉数> <洞穴强度> <X> <Y> <Z> <LevelName>] | /cave getmypos
 pocketmine.commands.cave.info=旋转角度:{%0} 洞穴长度:{%1} 分叉数:{%2} 洞穴强度:{%3}
 pocketmine.commands.cave.start=开始生成矿洞，可能需要较多时间
 pocketmine.commands.cave.success=矿洞生成完毕啦
