--- a/src/pocketmine/lang/locale/eng.ini
+++ b/src/pocketmine/lang/locale/eng.ini
@@ -217,7 +217,7 @@ pocketmine.command.alias.illegal=Could not register alias {%0} because it contai
 pocketmine.command.alias.notFound=Could not register alias {%0} because it contains commands that do not exist: {%1}
 pocketmine.command.exception=Unhandled exception executing command '{%0}' in {%1}: {%2}
 
-pocketmine.commands.cave.usage=/cave <angle of rotation> <length> <Branch Number> <strength> <X> <Y> <Z> <LevelName> | /cave getmypos
+pocketmine.commands.cave.usage=/cave [<angle of rotation> <length> <Branch Number> <strength> <X> <Y> <Z> <LevelName>] | /cave getmypos
 pocketmine.commands.cave.info=Angle of rotation:{%0} Length:{%1} Branch Number:{%2} Strength:{%3}
 pocketmine.commands.cave.start=Generating cave, please wait
 pocketmine.commands.cave.success=Cave generated
