--- a/src/pocketmine/lang/Installer/zho.ini
+++ b/src/pocketmine/lang/Installer/zho.ini
@@ -1,16 +1,16 @@
 language_has_been_selected=您選擇了繁體中文
-skip_installer=您想跳過安裝精靈嗎？
+skip_installer=您想跳過安裝流程嗎?
 
-welcome_to_pocketmine=歡迎來到Genisys！\n在開始使用您的新伺服器前您需要接受以下協議\nGenisys使用了LGPL協議\n你可以在這個資料夾中找到LICENCE文件
+welcome_to_pocketmine=歡迎來到GenisysPro的安裝流程！\n在開始運行您的新伺服器前您需要接受以下協議\nGenisysPro使用了LGPL協議\n你可以在這個資料夾中找到LICENCE文件
 accept_license=您接受協議內容嗎？
-you_have_to_accept_the_license=您必須接受LGPL協議來繼續使用Genisys
+you_have_to_accept_the_license=您必須要接受LGPL協議才能運行GenisysPro
 
-setting_up_server_now=您現在要開始設定您的伺服器了
-default_values_info=如果您希望使用預設值請直接按下Enter鍵
-server_properties=您以後可以在server.properties中修改設定
+setting_up_server_now=現在要開始設定您的伺服器了
+default_values_info=如果您希望使用預設值請直接按下Enter鍵,來進行略過
+server_properties=別擔心設定錯誤，您以後還是可以在server.properties中修改設定
 
-name_your_server=命名您的伺服器：
-port_warning=如果這是您第一次設定服伺服器，請儘量不要更改接口
+name_your_server=為您的伺服器命名：
+port_warning=如果這是您第一次設定伺服器，強烈建議不要變更接口
 server_port=伺服器接口：
 invalid_port=不正確的伺服器接口
 online_mode_info = 多人連線模式下, 伺服器將強制玩家需要 Xbox 登入\n當多人模式時, 建議讓伺服器開啟此功能
@@ -29,7 +29,7 @@ announce_player_achievements = 當玩家獲得成就時是否公告？
 
 op_info=OP是一個伺服器的管理員, 可以執行比普通玩家更多的指令
 op_who=請輸入OP的玩家名稱
-op_warning=你可以執行\"/op <玩家名稱>\"來新增OP
+op_warning=你可以執行"/op <玩家名稱>"來新增OP
 whitelist_info=白名單可以只允許在其列表中的玩家加入
 whitelist_enable=您想啟用白名單嗎？
 whitelist_warning=你可以用"/whitelist add <玩家名稱>"把別人加入白名單
@@ -47,5 +47,5 @@ ip_warning=您的外網IP是 {{EXTERNAL_IP}}，您可能需要接口轉發到您
 ip_confirm=請確認您檢查了它，如果您直接進入下一步並跳過這一步，沒有外部的玩家可以加入 [按\"Enter\"鍵]
 
 you_have_finished=您已經成功完成了伺服器安裝精靈
-pocketmine_will_start=Genisys現在開始運行，輸入 \"/help\" 來看所有可用的指令
+pocketmine_will_start=GenisysPro現在開始運行，輸入 \"/help\" 來看所有可用的指令
 pocketmine_plugins=請查看插件源來新增新的功能，迷你遊戲或者對伺服器的高級保護
