Add resource pack prompt translation for chs

--- a/src/pocketmine/lang/locale/chs.ini
+++ b/src/pocketmine/lang/locale/chs.ini
@@ -403,3 +403,11 @@ pocketmine.plugin.commandError=无法读取 {%1} 插件的 {%0} 指令
 pocketmine.plugin.aliasError=无法读取 {%1} 插件的 {%0} 别名
 pocketmine.plugin.deprecatedEvent=插件 '{%0}' 已经使用 '{%2}' 方法注册了一个在 '{%1}' 的监听器，但是该事件已过时。
 pocketmine.plugin.eventError="无法处理事件 '{%0}' 至 '{%1}'：{%2} 在 {%3} 上"
+
+pocketmine.resourcepacks.createFolder=资源包路径 {%0} 不存在，创建文件夹中...
+pocketmine.resourcepacks.notFolder=资源包路径 {%0} 已经存在且不是一个文件夹
+pocketmine.resourcepacks.load=加载资源包...
+pocketmine.resourcepacks.folderNotSupported=文件夹的资源包 {%0} 暂时不支持，请压缩
+pocketmine.resourcepacks.unsupportedType=未知类型资源包 {%0} 暂时未支持
+pocketmine.resourcepacks.packNotFound=找不到资源包 {%0}
+pocketmine.resourcepacks.loadFinished=成功加载 {%0} 个资源包
