Add resource pack prompt translation for eng

--- a/src/pocketmine/lang/locale/eng.ini
+++ b/src/pocketmine/lang/locale/eng.ini
@@ -411,3 +411,11 @@ pocketmine.plugin.deprecatedEvent=Plugin '{%0}' has registered a listener for '{
 pocketmine.plugin.eventError="Could not pass event '{%0}' to '{%1}': {%2} on {%3}
 
 message.bed.sleep.night=You can only sleep at night
+
+pocketmine.resourcepacks.createFolder=Path {%0} for resource packs does not exist, creating a new folder...
+pocketmine.resourcepacks.notFolder=Path {%0} for resource packs exist, but it is not a folder
+pocketmine.resourcepacks.load=Loading resource packs...
+pocketmine.resourcepacks.folderNotSupported={%0} is a resource pack in a folder, which is not supported yet. Please compress it
+pocketmine.resourcepacks.unsupportedType= Type of resource pack {%0} is unknown and is not supported yet
+pocketmine.resourcepacks.packNotFound=Resource pack {%0} not found
+pocketmine.resourcepacks.loadFinished=Successfully loaded {%0} resource pack(s)
