Add resource pack prompt translation for zho

--- a/src/pocketmine/lang/locale/zho.ini
+++ b/src/pocketmine/lang/locale/zho.ini
@@ -405,3 +405,11 @@ pocketmine.plugin.commandError=無法讀取 {%1} 插件的 {%0} 指令
 pocketmine.plugin.aliasError=無法讀取 {%1} 插件的 {%0} 別名
 pocketmine.plugin.deprecatedEvent=插件 '{%0}' 已經使用 '{%2}' 方法註冊了一個在 '{%1}' 的監聽器，但是該事件已過時。
 pocketmine.plugin.eventError="無法處理事件 '{%0}' 至 '{%1}'：{%2} 在 {%3} 上"
+
+pocketmine.resourcepacks.createFolder=資源包路徑 {%0} 不存在，正在創建新的檔案夾
+pocketmine.resourcepacks.notFolder=資源包路徑 {%0} 存在，但不是一個檔案夾
+pocketmine.resourcepacks.load=讀取資源包...
+pocketmine.resourcepacks.folderNotSupported=暫不支持檔案夾資源包 {%0} ，請壓縮
+pocketmine.resourcepacks.unsupportedType=暫不支持類型未知的資源包 {%0}
+pocketmine.resourcepacks.packNotFound=無法找到資源包 {%0}
+pocketmine.resourcepacks.loadFinished=已讀取 {%0} 個資源包
