Translate resource pack strings when a player joins

--- a/src/pocketmine/lang/locale/chs.ini
+++ b/src/pocketmine/lang/locale/chs.ini
@@ -22,6 +22,8 @@ disconnectionScreen.serverFull=服务器人数已满！
 disconnectionScreen.noReason=与服务器联机中断
 disconnectionScreen.invalidSkin=无效的皮肤！
 disconnectionScreen.invalidName=用户名不符合规范！
+disconnectionScreen.refusedResourcePack=必须下载资源包才能加入游戏！
+disconnectionScreen.unavailableResourcePack=无法在服务器上找到所需的资源包！
 
 death.fell.accident.generic={%0} 发动了信仰之跃！
 death.attack.inFire={%0} 在火焰中升天
