--- a/src/pocketmine/lang/locale/eng.ini
+++ b/src/pocketmine/lang/locale/eng.ini
@@ -22,6 +22,8 @@ disconnectionScreen.serverFull=Server is full!
 disconnectionScreen.noReason=Disconnected from server
 disconnectionScreen.invalidSkin=Invalid skin!
 disconnectionScreen.invalidName=Invalid name!
+disconnectionScreen.refusedResourcePack=Downloading the resource pack is mandatory!
+disconnectionScreen.unavailableResourcePack=The resoucrce pack is unavailable on the server!
 
 death.fell.accident.generic={%0} fell from a high place
 death.attack.inFire={%0} went up in flames
