--- a/src/pocketmine/lang/locale/zho.ini
+++ b/src/pocketmine/lang/locale/zho.ini
@@ -22,6 +22,8 @@ disconnectionScreen.serverFull=伺服器人數已滿！
 disconnectionScreen.noReason=與伺服器連線中斷
 disconnectionScreen.invalidSkin=無效的皮膚！
 disconnectionScreen.invalidName=無效名稱!
+disconnectionScreen.refusedResourcePack=必須下載資源包才能加入伺服器！
+disconnectionScreen.unavailableResourcePack=無法在伺服器上找到所需的資源包！
 
 death.fell.accident.generic={%0} 從高處摔落
 death.attack.inFire={%0} 在火焰中升天
