Update installer strings
* Change "LGPL" to "GPL" to keep consistency with rest documents
- Don't ask me whether I can speak Korean. Just copied translation of
"General Public License" from Wikipedia
* Change "Genisys" to "GenisysPro", also for consistency
* Change "LICENCE" to "LICENSE", since the former British guy insisted
on British English, quite inconsistent with GitHub, where American
English is more common

--- a/src/pocketmine/lang/Installer/eng.ini
+++ b/src/pocketmine/lang/Installer/eng.ini
@@ -1,9 +1,9 @@
 language_has_been_selected = English has been correctly selected.
 skip_installer = Do you want to skip the set-up wizard?
 
-welcome_to_pocketmine = Welcome to Genisys!\nBefore starting setting up your new server you have to accept the license.\nGenisys is licensed under the LGPL License,\nthat you can read opening the LICENSE file on this folder.
+welcome_to_pocketmine = Welcome to GenisysPro!\nBefore starting setting up your new server you have to accept the license.\nGenisysPro is licensed under the GPL License,\nthat you can read opening the LICENSE file on this folder.
 accept_license = Do you accept the License?
-you_have_to_accept_the_license = You have to accept the LGPL license to continue using Genisys
+you_have_to_accept_the_license = You have to accept the GPL license to continue using GenisysPro
 
 setting_up_server_now = You are going to set up your server now.
 default_values_info = If you don't want to change the default value, just press Enter.
@@ -15,7 +15,7 @@ server_port = Server port
 invalid_port = Invalid server port
 online_mode_info = In online mode, the server will force the user to login via XBOX.\nEnabling online mode is recommended if the server is opened to external players.
 online_mode = Do you want to enable online mode?
-ram_warning = The RAM is the maximum amount of memory Genisys will use. A value of 128-256 MB is recommended
+ram_warning = The RAM is the maximum amount of memory GenisysPro will use. A value of 128-256 MB is recommended
 server_ram = Server RAM in MB
 gamemode_info = Choose between Creative (1) or Survival (0)
 default_gamemode = Default Game mode
@@ -47,5 +47,5 @@ ip_warning = Your external IP is {{EXTERNAL_IP}}. You may have to port-forward t
 ip_confirm = Be sure to check it, if you have to forward and you skip that, no external players will be able to join. [Press Enter]
 
 you_have_finished = You have finished the set-up wizard correctly
-pocketmine_will_start = Genisys will now start. Type /help to view the list of available commands.
+pocketmine_will_start = GenisysPro will now start. Type /help to view the list of available commands.
 pocketmine_plugins = Check the Plugin Repository to add new features, minigames, or advanced protection to your server
