--- a/src/pocketmine/lang/Installer/fra.ini
+++ b/src/pocketmine/lang/Installer/fra.ini
@@ -1,9 +1,9 @@
 language_has_been_selected = Français a été correctement sélectionné.
 skip_installer = Voulez-vous passer l'assistant d'installation?
 
-welcome_to_pocketmine = Bienvenue sur Genisys!\nAvant de commencer à paramétrer votre nouveau serveur, vous devez accepter la license d'utilisation.\nGenisys est sous licence LGPL,\nvous pouvez la lire en ouvrant le fichier LICENSE dans ce dossier.
+welcome_to_pocketmine = Bienvenue sur GenisysPro!\nAvant de commencer à paramétrer votre nouveau serveur, vous devez accepter la license d'utilisation.\nGenisysPro est sous licence GPL,\nvous pouvez la lire en ouvrant le fichier LICENSE dans ce dossier.
 accept_license = Acceptez-vous la Licence?
-you_have_to_accept_the_license = Vous devez accepter la licence LGPL pour continuer à utiliser Genisys
+you_have_to_accept_the_license = Vous devez accepter la licence GPL pour continuer à utiliser GenisysPro
 
 setting_up_server_now = Vous êtes maintenant prêt à paramétrer votre serveur.
 default_values_info = Si vous ne voulez pas changer la valeur par défaut, appuyez sur entrée.
@@ -21,9 +21,9 @@ max_players = Joueurs max. en ligne
 spawn_protection_info = La protection de spawn désactive le placement/cassement de blocs dans la zone de spawn excepté pour les OPs
 spawn_protection = Activer la protection de spawn?
 level_name = Donnez un nom à votre niveau
-level_type = Définissez le type de niveau du serveur 
+level_type = Définissez le type de niveau du serveur
 invalid_level_type = Type de niveau invalide
-announce_player_achievements = Annoncer les succés dans le salon de discussion? 
+announce_player_achievements = Annoncer les succés dans le salon de discussion?
 
 op_info = Un OP est un administrateur du serveur. Les OPs peuvent exécuter plus de commandes que les joueurs normaux
 op_who = Nom de joueur OP (exemple, votre nom de jeu)
@@ -45,5 +45,5 @@ ip_warning = Votre IP externe est {{EXTERNAL_IP}}. Vous pourriez avoir à transm
 ip_confirm = Vérifiez-le bien, si vous avancez et sautez cette étape, les joueurs extérieurs ne pourront pas rejoindre votre serveur. [Tapez Enter]
 
 you_have_finished = Vous avez correctement terminé l'assistant d'installation
-pocketmine_will_start = Genisys va maintenant démarrer. Tapez /help pour voir la liste des commandes disponibles.
+pocketmine_will_start = GenisysPro va maintenant démarrer. Tapez /help pour voir la liste des commandes disponibles.
 pocketmine_plugins = Vérification du répertoire de plugin pour ajouter des nouvelles caractéristiques, mini-jeux, ou une protection avancée de votre serveur
