--- a/src/pocketmine/lang/Installer/ita.ini
+++ b/src/pocketmine/lang/Installer/ita.ini
@@ -1,9 +1,9 @@
 language_has_been_selected = Hai selezionato correttamente l'italiano.
 skip_installer = Vuoi saltare la procedura guidata di installazione?
 
-welcome_to_pocketmine = Benvenuto in Genisys!\nPrima di iniziare la configurazione del nuovo server e' necessario accettare la licenza.\nGenisys e' rilasciato sotto la licenza LGPL,\nche si puo' leggere aprendo il file di licenza su questa cartella.
+welcome_to_pocketmine = Benvenuto in GenisysPro!\nPrima di iniziare la configurazione del nuovo server e' necessario accettare la licenza.\nGenisysPro e' rilasciato sotto la licenza GPL,\nche si puo' leggere aprendo il file di licenza su questa cartella.
 accept_license = Accettate la licenza?
-you_have_to_accept_the_license = Bisogna accettare la licenza LGPL per continuare ad utilizzare Genisys
+you_have_to_accept_the_license = Bisogna accettare la licenza GPL per continuare ad utilizzare GenisysPro
 
 setting_up_server_now = Si sta per configurare il server ora.
 default_values_info = Se non si desidera modificare il valore di default, basta premere Invio.
@@ -15,7 +15,7 @@ server_port = Porta del server
 invalid_port = Porta del server invalida
 online_mode_info = In modalita' online, il server costringera' l'utente a effettuare il login tramite XBOX. \nL'attivazione della modalita' online e' consigliato se il server e' aperto ai giocatori esterni.
 online_mode = Vuoi abilitare la modalita' online?
-ram_warning = La RAM e' la quantita' massima di memoria che Genisys utilizzera'. Si consiglia un valore di 128-256 MB
+ram_warning = La RAM e' la quantita' massima di memoria che GenisysPro utilizzera'. Si consiglia un valore di 128-256 MB
 server_ram = Server RAM in MB
 gamemode_info = Scegliere tra Creativa (1) o sopravvivenza (0)
 default_gamemode = Modalita' di gioco predefinito
@@ -47,5 +47,5 @@ ip_warning = Il tuo IP esterno e' {{EXTERNAL_IP}}. Potrebbe essere necessario po
 ip_confirm = Assicuratevi di controllarlo, se devi fare il port-forward e non lo fai, nessun giocatore esterno sara' in grado di entrare. [Premere Invio]
 
 you_have_finished = e' terminata correttamente la procedura guidata di installazione
-pocketmine_will_start = Genisys ora si avviera'. Digita /help per visualizzare l'elenco dei comandi disponibili.
+pocketmine_will_start = GenisysPro ora si avviera'. Digita /help per visualizzare l'elenco dei comandi disponibili.
 pocketmine_plugins = Controllare il Repository Plugin per aggiungere nuove funzionalita', minigiochi, o protezione avanzata per il vostro server
