--- a/src/pocketmine/lang/Installer/kor.ini
+++ b/src/pocketmine/lang/Installer/kor.ini
@@ -1,9 +1,9 @@
 language_has_been_selected = 한국어가 언어로 선택되었습니다.
 skip_installer = 설치 마법사를 건너뛰겠습니까?
 
-welcome_to_pocketmine = Genisys에 오신 것을 환영합니다!\n서버 설치를 시작하기 전, 약관에 동의해야 합니다. \nGenisys는 GNU 약소 일반 공중 사용 허가서 (LGPL) 하에 배포되고 있습니다. \n이 폴더에서 약관을 읽을 수 있습니다.
+welcome_to_pocketmine = GenisysPro에 오신 것을 환영합니다!\n서버 설치를 시작하기 전, 약관에 동의해야 합니다. \nGenisysPro는 GNU 일반 공중 사용 허가서 (GPL) 하에 배포되고 있습니다. \n이 폴더에서 약관을 읽을 수 있습니다.
 accept_license = 약관에 동의하십니까?
-you_have_to_accept_the_license = GNU 약소 일반 공중 사용 허가서 (LGPL)에 동의하셔야 Genisys를 사용할 수 있습니다.
+you_have_to_accept_the_license = GNU 약소 일반 공중 사용 허가서 (GPL)에 동의하셔야 GenisysPro를 사용할 수 있습니다.
 
 setting_up_server_now = 서버 설정을 시작합니다.
 default_values_info = 기본값을 수정하고 싶지 않으면, 엔터를 누르시기 바랍니다.
@@ -15,7 +15,7 @@ server_port = 서버 포트
 invalid_port = 서버 포트가 잘못 입력되었습니다.
 online_mode_info = 온라인 모드에서는 서버가 사용자를 XBOX를 사용해서만 로그인 하도록 합니다.\n외부 서버를 여는 경우 온라인 모드를 활성화 하는 것이 좋습니다.
 online_mode = 온라인 모드를 활성화 하시겠습니까?
-ram_warning = RAM 값은 Genisys에 할당할 메모리의 크기입니다. 128~256MB를 권장합니다.
+ram_warning = RAM 값은 GenisysPro에 할당할 메모리의 크기입니다. 128~256MB를 권장합니다.
 server_ram = 서버의 램(RAM) (MB)
 gamemode_info = 크리에이티브 (1) 또는 서바이벌 (0) 게임모드 중 하나를 고르세요.
 default_gamemode = 기본 게임 모드
@@ -46,6 +46,6 @@ ip_get = 내/외부 IP 주소 얻기
 ip_warning = 당신의 외부 IP는 {{EXTERNAL_IP}}입니다. 당신의 내부 IP {{INTERNAL_IP}}(으)로 포트포워딩이 필요할 수 있습니다
 ip_confirm = 신중하게 확인하세요. 만약 포트포워딩이 필요하지만 하지 않을 경우 외부에서 플레이어들이 접속할 수 없게 됩니다. [계속 하시려면 엔터를 누르세요]
 
-you_have_finished = Genisys의 설치가 모두 완료되었습니다.
-pocketmine_will_start = Genisys 서버를 구동합니다. /help로 사용 가능한 모든 명령어의 목록을 보시기 바랍니다.
+you_have_finished = GenisysPro의 설치가 모두 완료되었습니다.
+pocketmine_will_start = GenisysPro 서버를 구동합니다. /help로 사용 가능한 모든 명령어의 목록을 보시기 바랍니다.
 pocketmine_plugins = 플러그인 저장소에서 새로운 기능을 추가하세요. 새로운 기능, 미니게임을 추가하거나 고급 기능으로 당신의 서버를 보호할 수 있습니다
