--- a/src/pocketmine/lang/Installer/zho.ini
+++ b/src/pocketmine/lang/Installer/zho.ini
@@ -1,9 +1,9 @@
 language_has_been_selected=您選擇了繁體中文
 skip_installer=您想跳過安裝流程嗎?
 
-welcome_to_pocketmine=歡迎來到GenisysPro的安裝流程！\n在開始運行您的新伺服器前您需要接受以下協議\nGenisysPro使用了LGPL協議\n你可以在這個資料夾中找到LICENCE文件
+welcome_to_pocketmine=歡迎來到GenisysPro的安裝流程！\n在開始運行您的新伺服器前您需要接受以下協議\nGenisysPro使用了GPL協議\n你可以在這個資料夾中找到LICENSE文件
 accept_license=您接受協議內容嗎？
-you_have_to_accept_the_license=您必須要接受LGPL協議才能運行GenisysPro
+you_have_to_accept_the_license=您必須要接受GPL協議才能運行GenisysPro
 
 setting_up_server_now=現在要開始設定您的伺服器了
 default_values_info=如果您希望使用預設值請直接按下Enter鍵,來進行略過
@@ -15,7 +15,7 @@ server_port=伺服器接口：
 invalid_port=不正確的伺服器接口
 online_mode_info = 多人連線模式下, 伺服器將強制玩家需要 Xbox 登入\n當多人模式時, 建議讓伺服器開啟此功能
 online_mode = 您想啟用多人模式?
-ram_warning=RAM是Genisys可用的最大記憶體。推薦範圍：128～256 MB
+ram_warning=RAM是GenisysPro可用的最大記憶體。推薦範圍：128～256 MB
 server_ram=分配給服務器的記憶體(MB)：
 gamemode_info=選擇模式：(0) 生存模式 或 (1) 創造模式
 default_gamemode=預設遊戲模式
