--- a/src/pocketmine/lang/Installer/chs.ini
+++ b/src/pocketmine/lang/Installer/chs.ini
@@ -1,21 +1,21 @@
 language_has_been_selected = 您现在选择了简体中文.
 skip_installer = 您想跳过安装向导吗?
 
-welcome_to_pocketmine = 欢迎来到Genisys!\n在开始使用您的新服务器之前，您需要接受以下协议\nGenisys使用了LGPL协议，\n你可以在这个文件夹中找到LICENCE文件。
+welcome_to_pocketmine = 欢迎来到GenisysPro!\n在开始使用您的新服务器之前，您需要接受以下协议\nGenisysPro使用了GPL协议，\n您可以在这个文件夹中找到LICENSE文件。
 accept_license = 您接受协议内容吗？
-you_have_to_accept_the_license = 您要接受LGPL协议才可继续使用Genisys
+you_have_to_accept_the_license = 您要接受LGPL协议才可继续使用GenisysPro
 
-setting_up_server_now = 你现在要开始设置您的服务器了。
+setting_up_server_now = 您现在要开始设置您的服务器了。
 default_values_info = 如果您希望使用默认设置，请直接按下回车键。
 server_properties = 您以后可以在server.properties中修改设置.
 
-name_your_server = 给你的服务器起个名字吧:
+name_your_server = 给您的服务器起个名字吧:
 port_warning = 如果这是您第一次设置服务器，尽量不要改变端口。
 server_port = 设置你的服务器端口:
 invalid_port = 服务器端口不正确。
 online_mode_info = 联机模式下, 服务器将强制玩家需要 Xbox 登录\n当联机时, 建议让服务器开启此功能
 online_mode = 您想启用联机模式?
-ram_warning = 设置Genisys可用的最大内存.
+ram_warning = 设置GenisysPro可用的最大内存.
 server_ram = 分配给服务器的内存(RAM)(MB):
 gamemode_info = 选择模式: (0)生存模式 或 (1)创造模式
 default_gamemode = 默认游戏模式
