--- a/src/pocketmine/lang/Installer/deu.ini
+++ b/src/pocketmine/lang/Installer/deu.ini
@@ -1,9 +1,9 @@
 language_has_been_selected = Deutsch wurde erfolgreich als Sprache ausgewählt.
 skip_installer = Möchtest du den Einrichtungsassistenten überspringen?
 
-welcome_to_pocketmine = Willkommen bei Genisys!\nBevor es mit der Einrichtung deines neuen Servers losgehen kann, musst du die Lizenz akzeptieren.\nGenisys ist unter der GPL Lizenz Version 3 und neuer lizenziert, welche du in der Datei LICENCE nachlesen kannst.
+welcome_to_pocketmine = Willkommen bei GenisysPro!\nBevor es mit der Einrichtung deines neuen Servers losgehen kann, musst du die Lizenz akzeptieren.\nGenisysPro ist unter der GPL Lizenz Version 3 und neuer lizenziert, welche du in der Datei LICENSE nachlesen kannst.
 accept_license = Akzeptierst du die Lizenz?
-you_have_to_accept_the_license = Um Genisys weiterverwenden zu können, musst du der Lizenz zustimmen.
+you_have_to_accept_the_license = Um GenisysPro weiterverwenden zu können, musst du der Lizenz zustimmen.
 
 setting_up_server_now = Du bist nun dabei, deinen Server einzurichten.
 default_values_info = Drücke einfach Enter, um die Standardwerte zu übernehmen.
@@ -15,7 +15,7 @@ server_port = Server-Port
 invalid_port = Ungültiger Server-Port
 online_mode_info = Im Online-Modus wird der Spieler gezwungen, sich mit seinem XBOX-Account zu authentifizieren.\nEs wird die Aktivierung des Online-Modus empfohlen, falls der Server für externe Spieler geöffnet ist.
 online_mode = Möchtest du den Online-Modus aktivieren?
-ram_warning = Der RAM ist die maximale Menge an Arbeitsspeicher, welchen Genisys verwenden darf. Es wird ein Wert von 128-256 MB empfohlen.
+ram_warning = Der RAM ist die maximale Menge an Arbeitsspeicher, welchen GenisysPro verwenden darf. Es wird ein Wert von 128-256 MB empfohlen.
 server_ram = Server RAM in MB
 gamemode_info = Wähle zwischen Kreativmodus (1) oder Überlebensmodus (0)
 default_gamemode = Standard Spielmodus
@@ -47,5 +47,5 @@ ip_warning = Deine externe IP ist {{EXTERNAL_IP}}. Möglicherweise muss eine Por
 ip_confirm = Stelle sicher, dass du das geprüft hast. Falls du eine Weiterleitung benötigst, aber nicht einrichtest, wird kein externer Spieler joinen können. [Drücke Enter]
 
 you_have_finished = Du hast den Einrichtungsassistenten nun erfolgreich abgeschlossen.
-pocketmine_will_start = Genisys wird jetzt gestartet. Gib /help ein, um dir eine Liste verfügbarer Befehle anzeigen zu lassen.
+pocketmine_will_start = GenisysPro wird jetzt gestartet. Gib /help ein, um dir eine Liste verfügbarer Befehle anzeigen zu lassen.
 pocketmine_plugins = Prüfe auch das Plugin-Repository im Web, um deinem Server weitere Features, Minigames oder erweiterten Schutz hinzuzufügen.
