--- a/src/pocketmine/lang/locale/deu.ini
+++ b/src/pocketmine/lang/locale/deu.ini
@@ -99,7 +99,7 @@ commands.effect.usage=/effect <Spieler> <Effekt> [Sekunden] [Verstärker] [verst
 commands.effect.notFound=Es gibt keinen Mob-Effekt mit der ID {%0}
 commands.effect.success={%0} (ID {%1}) * {%2} für {%4} Sekunden an {%3} gegeben
 commands.effect.success.removed={%0} von {%1} genommen
-commands.effect.success.removed.all=Alle Effekte von {%0} genommen
+commands.effect.success.removed.all=Alle Effekte von {%0} entfernt
 commands.effect.failure.notActive=Konnte {%0} nicht von {%1} nehmen, da der Effekt nicht vorhanden war
 commands.effect.failure.notActive.all=Konnte keinen Effekt von {%0} nehmen, da kein Effekt vorhanden war
 
