--- a/src/pocketmine/lang/locale/deu.ini
+++ b/src/pocketmine/lang/locale/deu.ini
@@ -91,7 +91,7 @@ commands.time.query=Zeit: {%0}
 
 commands.me.usage=/me <Aktion ...>
 
-commands.give.item.notFound=Es gibt kein Item mit dem Namen {%0}
+commands.give.item.notFound=Es gibt kein Gegenstand mit dem Namen {%0}
 commands.give.success={%0} * {%1} an {%2} gegeben
 commands.give.tagError=Parsen des Datatags fehlgeschlagen: {%0}
 
@@ -103,7 +103,7 @@ commands.effect.success.removed.all=Alle Effekte von {%0} entfernt
 commands.effect.failure.notActive=Konnte {%0} nicht von {%1} nehmen, da der Effekt nicht vorhanden war
 commands.effect.failure.notActive.all=Konnte keinen Effekt von {%0} nehmen, da kein Effekt vorhanden war
 
-commands.enchant.noItem=Dieser Spieler hält keinen Gegenstand
+commands.enchant.noItem=Dieser Spieler hält keinen Gegenstand in der Hand
 commands.enchant.notFound=Es gibt keine Verzauberung mit der ID {%0}
 commands.enchant.success=Verzauberung erfolgreich
 commands.enchant.cantEnchant=Die gewählte Verzauberung kann diesem Gegenstand nicht hinzugefügt werden.
@@ -260,7 +260,7 @@ pocketmine.command.plugins.description=Zeigt eine Liste aller auf dem Server lau
 pocketmine.command.plugins.success=Plugins ({%0}): {%1}
 pocketmine.command.plugins.usage=/plugins
 
-pocketmine.command.reload.description=Lädt die Serverkonfiguration und Plugins neu ein
+pocketmine.command.reload.description=Lädt die Serverkonfiguration und Plugins neu
 pocketmine.command.reload.usage=/reload
 pocketmine.command.reload.reloading=Server wird neu geladen...
 pocketmine.command.reload.reloaded=Neuladen des Servers abgeschlossen
