Updated some bad translations | deu.ini

--- a/src/pocketmine/lang/locale/deu.ini
+++ b/src/pocketmine/lang/locale/deu.ini
@@ -47,7 +47,7 @@ gameMode.survival=Überlebensmodus
 gameMode.creative=Kreativmodus
 gameMode.adventure=Abenteuermodus
 gameMode.spectator=Zuschauermodus
-gameMode.changed=Dein Spielmodus wurde aktualisiert
+gameMode.changed=Dein Spielmodus wurde geändert
 
 potion.moveSpeed=Schnelligkeit
 potion.moveSlowdown=Langsamkeit
@@ -74,15 +74,15 @@ potion.absorption=Absorption
 potion.saturation=Sättigung
 
 commands.generic.exception=Ein unbekannter Fehler trat auf, während versucht wurde, diesen Befehl auszufüren
-commands.generic.permission=Du hast keine Berechtigung, diesen Befehl auszuführen
-commands.generic.notFound=Unbekannter Befehl. Versuche /help für eine Liste von Befehlen
+commands.generic.permission=Du hast keine Berechtigung, um diesen Befehl auszuführen
+commands.generic.notFound=Unbekannter Befehl. Gib /help ein, um eine Liste von Befehlen zu erhalten
 commands.generic.player.notFound=Dieser Spieler kann nicht gefunden werden
 commands.generic.usage=Aufruf: {%0}
 commands.generic.level=Weltname
 commands.generic.seed=Startwert
 commands.generic.name=Name
 commands.generic.generator=Generator
-commands.generic.opt.missing=Notwendige Eigenschaft fehlt, bitte überprüfen und neu eingeben.
+commands.generic.opt.missing=Notwendige Eigenschaft fehlt, Bitte überprüfen und neu eingeben.
 commands.generic.runingame=Dieser Befehl kann nur im Spiel ausgeführt werden.
 
 commands.time.added={%0} zur Zeit hinzugefügt
@@ -146,7 +146,7 @@ commands.ban.usage=/ban <Spieler> [Grund ...] [Zeit(Tag)]
 commands.unban.success=Spieler {%0} wurde entbannt
 commands.unban.usage=/pardon <Spieler>
 
-commands.banip.invalid=Du hast eine ungültige IP-Adresse angegeben oder einen Spieler, der nicht online ist
+commands.banip.invalid=Du hast eine ungültige IP-Adresse oder einen Spieler, der nicht online ist angegeben
 commands.banip.success=IP-Adresse {%0} wurde gebannt
 commands.banip.success.players=IP-Adresse {%0}, die zu {%1} gehört, wurde gebannt
 commands.banip.usage=/ban-ip <IP-Adresse|Spieler> [Grund ...]
@@ -173,7 +173,7 @@ commands.stop.usage=/stop
 commands.stop.start=Server wird beendet
 
 commands.kick.success={%0} wurde aus dem Spiel geworfen
-commands.kick.success.reason={%0} wurde aus dem Spielgeworfen: '{%1}'
+commands.kick.success.reason={%0} wurde aus dem Spiel geworfen: '{%1}'
 commands.kick.usage=/kick <Spieler> [Grund ...]
 
 commands.tp.success={%0} wurde zu {%1} teleportiert
