--- a/src/pocketmine/lang/locale/deu.ini
+++ b/src/pocketmine/lang/locale/deu.ini
@@ -82,7 +82,7 @@ commands.generic.level=Weltname
 commands.generic.seed=Startwert
 commands.generic.name=Name
 commands.generic.generator=Generator
-commands.generic.opt.missing=Notwendige Eigenschaft fehlt, Bitte überprüfen und neu eingeben.
+commands.generic.opt.missing=Notwendige Eigenschaft fehlt, bitte überprüfen und neu eingeben.
 commands.generic.runingame=Dieser Befehl kann nur im Spiel ausgeführt werden.
 
 commands.time.added={%0} zur Zeit hinzugefügt
@@ -231,7 +231,7 @@ pocketmine.level.unloading=Welt "{%0}" wird entladen
 pocketmine.server.start=Starte Minecraft: PE server version {%0}
 pocketmine.server.networkError=[Netzwerk] Schnittstelle {%0} wurde wegen {%1} beendet
 pocketmine.server.networkStart=Öffne Server auf {%0}:{%1}
-pocketmine.server.info=Dieser Server läuft mit Version {%0}{%1} "{%2}" (API {%3})
+pocketmine.server.info=Dieser Server wird mit {%0}{%1} "{%2}" (API {%3}) betrieben
 
 pocketmine.server.info.extended.title=-----Server Information-----
 pocketmine.server.info.extended1=Dieser Server läuft mit Version {%0}{%1} (Codename "{%2}")
@@ -409,3 +409,13 @@ pocketmine.plugin.commandError=Der Befehl {%0} konnte für das Plugin {%1} nicht
 pocketmine.plugin.aliasError=Alias {%0} konnte für Plugin {%1} nicht geladen werden
 pocketmine.plugin.deprecatedEvent=Das Plugin '{%0}' hat einen Listener für '{%1}' auf die Methode '{%2}' registriert, aber das Event ist veraltet.
 pocketmine.plugin.eventError="Das Event '{%0}' konnte nicht an '{%1}' weitergegeben werden: {%2} in {%3}"
+
+message.bed.sleep.night=Du kannst nur nachts schlafen!
+
+pocketmine.resourcepacks.createFolder=Pfad {%0} für Ressourcenpakete existiert nicht, erstelle einen neuen...
+pocketmine.resourcepacks.notFolder=Pfad {%0} existiert, ist aber kein Ordner
+pocketmine.resourcepacks.load=Lade Ressourcenpakete...
+pocketmine.resourcepacks.folderNotSupported={%0} ist ein Ressourcenpaket im Ordner, welches noch nicht unterstützt wird. Bitte komprimiere es
+pocketmine.resourcepacks.unsupportedType= Typ des Ressourcenpakets {%0} is unbekannt und wird noch nicht unterstützt
+pocketmine.resourcepacks.packNotFound=Ressourcenpaket {%0} wurde nicht gefunden
+pocketmine.resourcepacks.loadFinished=Es wurden erfolgreich {%0} Rassourcenpakete geladen!
