Display Git commit SHA-1 in /version command output

--- a/src/pocketmine/lang/locale/eng.ini
+++ b/src/pocketmine/lang/locale/eng.ini
@@ -201,7 +201,7 @@ pocketmine.server.networkStart = Opening server on {%0}:{%1}
 pocketmine.server.info = This server is running {%0}{%1} "{%2}" (API {%3})
 
 pocketmine.server.info.extended.title = -----Server information-----
-pocketmine.server.info.extended1 = This server is running {%0}{%1} {%2}
+pocketmine.server.info.extended1 = This server is running {%0}{%1} ({%2}) {%3}
 pocketmine.server.info.extended2 = PHP version: {%0}
 pocketmine.server.info.extended3 = API: {%0}
 pocketmine.server.info.extended4 = Target client: Minecraft PE {%0}
