--- a/src/pocketmine/lang/locale/kor.ini
+++ b/src/pocketmine/lang/locale/kor.ini
@@ -235,7 +235,7 @@ pocketmine.server.networkStart = 서버를 {%0}:{%1}에서 여는 중입니다
 pocketmine.server.info = 이 서버는 {%0} (버전 {%1} "{%2}" (API {%3}))을(를) 구동 중입니다
 
 pocketmine.server.info.extended.title = -----서버 정보-----
-pocketmine.server.info.extended1 = 이 서버는 {%0}{%1} (코드네임 "{%2}")을 구동 중입니다
+pocketmine.server.info.extended1 = 이 서버는 {%0}{%1} ({%2}) (코드네임 "{%3}")을 구동 중입니다
 pocketmine.server.info.extended2 = PHP 버전: {%0}
 pocketmine.server.info.extended3 = API: {%0} (iTX API 버전 {%1})
 pocketmine.server.info.extended4 = 대상 클라이언트: Minecraft PE {%0} (프로토콜 버전 {%1})
