--- a/src/pocketmine/lang/locale/zho.ini
+++ b/src/pocketmine/lang/locale/zho.ini
@@ -232,7 +232,7 @@ pocketmine.server.networkStart = 正在啟動伺服器在 {%0}:{%1}
 pocketmine.server.info = 此伺服器正在運作 {%0} {%1} 版本 "{%2}" （API {%3}）
 
 pocketmine.server.info.extended = 此伺服器正在運作 {%0} {%1} 「{%2}」 執行 API 版本 {%3} 支援 Minecraft：PE {%4} （協定版本 {%5}）
-pocketmine.server.info.extended1 = 本伺服器正運行 {%0}{%1} (代號 "{%2}")
+pocketmine.server.info.extended1 = 本伺服器正運行 {%0}{%1} ({%2}) (代號 "{%2}")
 pocketmine.server.info.extended2 = PHP 版本: {%0}
 pocketmine.server.info.extended3 = API: {%0} (iTX API 版本 {%1})
 pocketmine.server.info.extended4 = Target client: Minecraft PE {%0} (protocol 版本 {%1})
