Remove iTX API version in /version command output
iTX API version has been deprecated.

--- a/src/pocketmine/lang/locale/deu.ini
+++ b/src/pocketmine/lang/locale/deu.ini
@@ -236,7 +236,7 @@ pocketmine.server.info = Dieser Server wird mit {%0}{%1} "{%2}" (API {%3}) betri
 pocketmine.server.info.extended.title = -----Server Information-----
 pocketmine.server.info.extended1 = Dieser Server läuft mit Version {%0}{%1} ({%2}) (Codename "{%3}")
 pocketmine.server.info.extended2 = PHP Version: {%0}
-pocketmine.server.info.extended3 = API: {%0} (iTX API Version {%1})
+pocketmine.server.info.extended3 = API: {%0}
 pocketmine.server.info.extended4 = Zielclient: Minecraft PE {%0} (Protokollversion {%1})
 
 pocketmine.server.license = {%0} wurde unter der GPL Lizenz Version 3 und neuer herausgegeben
