--- a/src/pocketmine/lang/locale/chs.ini
+++ b/src/pocketmine/lang/locale/chs.ini
@@ -232,7 +232,7 @@ pocketmine.server.info = 此服务器正在运作 {%0} {%1} 版本 "{%2}" （API
 pocketmine.server.info.extended = 此服务器正在运作 {%0} {%1} “{%2}” 执行 API 版本 {%3} 支持 Minecraft：PE {%4} （协议版本 {%5}）
 pocketmine.server.info.extended1 = 本服务器正运行 {%0}{%1} ({%2}) (代号 "{%3}")
 pocketmine.server.info.extended2 = PHP 版本: {%0}
-pocketmine.server.info.extended3 = API: {%0} (iTX API 版本 {%1})
+pocketmine.server.info.extended3 = API: {%0}
 pocketmine.server.info.extended4 = 客户端: Minecraft PE {%0} (protocol 版本
 
 pocketmine.server.license = {%0} 根据 LGPL 许可发布
