Improve client info translation for Chinese
[SKIP CI]

--- a/src/pocketmine/lang/locale/chs.ini
+++ b/src/pocketmine/lang/locale/chs.ini
@@ -233,7 +233,8 @@ pocketmine.server.info.extended = 此服务器正在运作 {%0} {%1} “{%2}” 
 pocketmine.server.info.extended1 = 本服务器正运行 {%0}{%1} ({%2}) (代号 "{%3}")
 pocketmine.server.info.extended2 = PHP 版本: {%0}
 pocketmine.server.info.extended3 = API: {%0}
-pocketmine.server.info.extended4 = 客户端: Minecraft PE {%0} (protocol 版本
+pocketmine.server.info.extended4 = 客户端: Minecraft PE {%0}
+pocketmine.server.info.extended5 = 协议版本: {%0}
 
 pocketmine.server.license = {%0} 根据 LGPL 许可发布
 pocketmine.server.tickOverload = 注意！服务器有超载的可能
