Lost maxEnchant message

--- a/src/pocketmine/lang/locale/deu.ini
+++ b/src/pocketmine/lang/locale/deu.ini
@@ -103,6 +103,7 @@ commands.effect.success.removed.all = Alle Effekte von {%0} entfernt
 commands.effect.failure.notActive = Konnte {%0} nicht von {%1} nehmen, da der Effekt nicht vorhanden war
 commands.effect.failure.notActive.all = Konnte keinen Effekt von {%0} nehmen, da kein Effekt vorhanden war
 
+commands.enchant.maxLevel = Das Maximale Verzauberungs Level der Verzauberung geht von 1 - {%0}
 commands.enchant.noItem = Dieser Spieler hält keinen Gegenstand in der Hand
 commands.enchant.notFound = Es gibt keine Verzauberung mit der ID {%0}
 commands.enchant.success = Verzauberung erfolgreich
