Add max enchant level message for Chinese

--- a/src/pocketmine/lang/locale/chs.ini
+++ b/src/pocketmine/lang/locale/chs.ini
@@ -105,6 +105,7 @@ commands.effect.success.removed.all = 已解除 {%0} 身上所有特殊状态
 commands.effect.failure.notActive = 无法从 {%1} 身上移除 {%0}，因为其身上无此效果
 commands.effect.failure.notActive.all = 无法移除效果，因为 {%0} 身上没有任何效果
 
+commands.enchant.maxLevel = 该附魔的级别范围是 1 - {%0}
 commands.enchant.noItem = 目标没有手持一样物品
 commands.enchant.notFound = 没有一个附魔ID为 {%0}
 commands.enchant.success = 附魔完成
