--- a/src/pocketmine/lang/locale/zho.ini
+++ b/src/pocketmine/lang/locale/zho.ini
@@ -105,6 +105,7 @@ commands.effect.success.removed.all = 已解除 {%0} 身上所有特殊狀態
 commands.effect.failure.notActive = 無法從 {%1} 身上移除 {%0}，因為其身上無此效果
 commands.effect.failure.notActive.all = 無法移除效果因為 {%0} 身上沒有任何效果
 
+commands.enchant.maxLevel = 這個附魔的等級範圍是 1 - {%0}
 commands.enchant.noItem = 目標沒有手持一樣物品
 commands.enchant.notFound = 沒有一個附魔ID為 {%0}
 commands.enchant.success = 附魔完成
