--- a/src/pocketmine/lang/locale/ces.ini
+++ b/src/pocketmine/lang/locale/ces.ini
@@ -23,7 +23,7 @@ death.attack.cactus = {%0} byl upíchán k smrti
 death.attack.generic = {%0} zemřel
 death.attack.explosion = {%0} vybouchnul
 death.attack.explosion.player = {%0} byl odbouchnut hráčem {%1}
-death.attack.magic = {%0}  byl zabit magickým efektem
+death.attack.magic = {%0}  byl zabit pomocí magie
 death.attack.wither = {%0} zemřel na útok Withera
 death.attack.mob = {%0} byl zabit {%1}
 death.attack.player = {%0} byl zabit {%1}
@@ -37,7 +37,7 @@ gameMode.survival = §l§f"Mód Survival"
 gameMode.creative = §l§f"Mód Creative"
 gameMode.adventure = §l§f"Mód Adventure"
 gameMode.spectator = §l§f"Mód Spetractor"
-gameMode.changed = Tvůj herní mód byl úspěšně změněn
+gameMode.changed = Tvůj herní mód byl úspěšně změněn na {%0}
 
 potion.moveSpeed = Rychlost
 potion.moveSlowdown = zpomalení
@@ -69,7 +69,7 @@ commands.generic.notFound = §l§cNeznamy příkaz. Pouzijte /help pro ziskani s
 commands.generic.player.notFound = Tento hráč nemůže být nalezen
 commands.generic.usage = Vyuziti:{%0}
 
-commands.time.added = Pridáno {%0} do časů
+commands.time.added = Přidáno {%0} do časů
 commands.time.set = Čas nastaven na {%0}
 commands.time.query = Čas je {%0}
 
@@ -77,7 +77,7 @@ commands.me.usage = /me  <action ...>
 
 commands.give.item.notFound = Neexistuje žádný item s tímto ménem {%0}
 commands.give.success = Given {%0} * {%1} to {%2}
-commands.give.tagError = Rozbor data tagu neůspesný: {%0}
+commands.give.tagError = Rozbor data tagu neůspěšný: {%0}
 
 commands.effect.usage = /effect <player> <effect> [seconds] [amplifier] [hideParticles] NEBO /effect <player> clear
 commands.effect.notFound = Efekt s ID {%0} neexistuje
@@ -89,7 +89,7 @@ commands.effect.failure.notActive.all = Nemůžu získat efekt od {%0} protože 
 
 commands.enchant.noItem = Terc nedrzi item
 commands.enchant.notFound = Tady není zadný enchant s ID {%0}
-commands.enchant.success = Enchant byl uspesný
+commands.enchant.success = Enchant byl uspěšný
 commands.enchant.usage = /enchant <player> <enchantment ID> [level]
 
 commands.particle.success = Zapínám efekt {%0} {%1}
@@ -195,8 +195,8 @@ pocketmine.level.tickError = Nemůžu najít svět {%0}; {%1}
 pocketmine.level.chunkUnloadError = Chyba při načítáni chunku {%0}
 pocketmine.level.backgroundGeneration = Spawn pro svět {%0} bude vytvořen v pozadí
 pocketmine.level.defaultError = Žádný základní level nebyl načten
-pocketmine.level.preparing = Připravuji svět {%0}
-pocketmine.level.unloading = Odnacitavam svět {%0}
+pocketmine.level.preparing = Zapíná se svět {%0}
+pocketmine.level.unloading = Vypníná se svět {%0}
 
 pocketmine.server.start = Startuji Minecraft: PE server na verzi {%0}
 pocketmine.server.networkError = [Network] Zastavil interface {%0} protože {%1}
@@ -204,7 +204,7 @@ pocketmine.server.networkStart = Startuji server na {%0}:{%1}
 pocketmine.server.info = Tento server běží na {%0} verzi {%1}"{%2}" (API {%3})
 pocketmine.server.info.extended = Tento server používá {%0} {%1}「{%2}」implantována API {%3} pro Minecraft:PE {%4}
 (protokol {%5})
-pocketmine.server.license = {%0} je distribuován pod LGPL Licencí
+pocketmine.server.license = {%0} je distribuován pod LGP Licencí
 pocketmine.server.tickOverload = Pozor! Server je pretižen!
 pocketmine.server.startFinished = Hotovo ({%0}s)! Pro pomoc napiš "help" nebo "?"
 pocketmine.server.defaultGameMode = Základní herní mód je:{%0}
@@ -216,7 +216,7 @@ pocketmine.command.alias.illegal = Nemůžu registrovat alias {%0} protože obsa
 pocketmine.command.alias.notFound = Nemůžu registrovat alias {%0} protože obsahuje příkaz který neexistuje:{%1}
 pocketmine.command.exception = Neošetřené použití příkazu '{%0}' in {%1}: {%2}
 
-pocketmine.command.plugins.description = Dá list všech pluginů na serveru
+pocketmine.command.plugins.description = Zobrazí list všech pluginů
 pocketmine.command.plugins.success = Pluginy ({%0}):{%1}
 pocketmine.command.plugins.usage = /plugins
 
@@ -303,8 +303,8 @@ pocketmine.plugin.enable = Povolení {%0}
 pocketmine.plugin.disable = Zakázání {%0}
 pocketmine.plugin.restrictedName = Omezené méno
 pocketmine.plugin.incompatibleAPI = Nekompatibilní API
-pocketmine.plugin.unknownDependency = Neznámá závislost
-pocketmine.plugin.circularDependency = oběžná závislost detekována
+pocketmine.plugin.unknownDependency = Neznámá závislost v pluginu
+pocketmine.plugin.circularDependency = Byla nalezena oběžná závislost na pluginu
 pocketmine.plugin.genericLoadError = Nemůžu načíst plugin '{%0}'
 pocketmine.plugin.spacesDiscouraged = Plugin '{%0}' používá mezery ve svém jménu, to nejde
 pocketmine.plugin.loadError = Nemůžu načíst plugin '{%0}':{%1}
@@ -312,5 +312,5 @@ pocketmine.plugin.duplicateError = Nemůžu načíst plugin '{%0}':plugin existu
 pocketmine.plugin.fileError = Nemůžu načíst '{%0}' ve složce  '{%1}':{%2}
 pocketmine.plugin.commandError = Nemůžu načíst příkaz {%0} pro plugin {%1}
 pocketmine.plugin.aliasError = Nemůžu načíst alias {%0} pro plugin {%1}
-pocketmine.plugin.deprecatedEvent = Plugin '{%0}' registroval poslouchač pro '{%1}' na metodě '{%2}', ale event. není praktikován.
+pocketmine.plugin.deprecatedEvent = Plugin '{%0}' registroval Listener pro '{%1}' na metodě '{%2}', ale event není praktikován.
 pocketmine.plugin.eventError = "Nemůžu předělat event '{%0}' na'{%1}':{%2}na {%3}"
