Rebranding: "Minecraft PE/Win10" -> "Minecraft"
[Skip CI]

--- a/src/pocketmine/lang/locale/fra.ini
+++ b/src/pocketmine/lang/locale/fra.ini
@@ -224,7 +224,7 @@ pocketmine.level.backgroundGeneration = L'apparition du terrain pour le niveau "
 pocketmine.level.defaultError = Aucun niveau par défaut n'a été chargée
 pocketmine.level.preparing = Préparation du terrain "{%0}"
 pocketmine.level.unloading = Déchargement du terrain "{%0}"
-pocketmine.server.start = Démarrage du serveur Minecraft PE version {%0}
+pocketmine.server.start = Démarrage du serveur Minecraft version {%0}
 pocketmine.server.networkError = [Réseau] Arrêt de l'interface {%0} à cause de {%1}
 pocketmine.server.networkStart = Ouverture du serveur sur {%0}:{%1}
 pocketmine.server.info = Ce serveur fonctionne sur {%0} version {%1} "{%2}" (API {%3})
