--- a/src/pocketmine/lang/locale/ukr.ini
+++ b/src/pocketmine/lang/locale/ukr.ini
@@ -241,10 +241,10 @@ pocketmine.level.defaultError = Помилка завантаження світ
 pocketmine.level.preparing = Підготовка світу "{%0}"
 pocketmine.level.unloading = Вивантаження світу "{%0}"
 
-pocketmine.server.start = Запускається сервер Minecraft PE {%0}
+pocketmine.server.start = Запускається сервер Minecraft {%0}
 pocketmine.server.networkError = [Мережа] Зупинено інтерфейс {%0}. Причина: {%1}
 pocketmine.server.networkStart = Реєстрація серверу на {%0}:{%1}
-pocketmine.server.info.extended = Сервер використовує {%0} {%1} 「{%2}」. Версія API: {%3}. Версія Minecraft PE: {%4}. Протокол версії {%5}
+pocketmine.server.info.extended = Сервер використовує {%0} {%1} 「{%2}」. Версія API: {%3}. Версія Minecraft: {%4}. Протокол версії {%5}
 pocketmine.server.info = Цей сервер використовує {%0}, версію {%1} "{%2}" (API {%3})
 pocketmine.server.license = {%0} розповсюджується за ліцензією LGPL
 pocketmine.server.tickOverload = Сервер перевантажено!
