--- a/src/pocketmine/lang/locale/zho.ini
+++ b/src/pocketmine/lang/locale/zho.ini
@@ -236,7 +236,7 @@ pocketmine.server.info.extended = 此伺服器正在運作 {%0} {%1} 「{%2}」 
 pocketmine.server.info.extended1 = 本伺服器正運行 {%0}{%1} ({%2}) (代號 "{%2}")
 pocketmine.server.info.extended2 = PHP 版本: {%0}
 pocketmine.server.info.extended3 = API: {%0}
-pocketmine.server.info.extended4 = 目標用戶端: Minecraft PE {%0}
+pocketmine.server.info.extended4 = 目標用戶端: Minecraft {%0}
 pocketmine.server.info.extended5 = 協議版本: {%0}
 
 pocketmine.server.license = {%0} 根據 LGPL 許可發佈
