--- a/src/pocketmine/lang/locale/chs.ini
+++ b/src/pocketmine/lang/locale/chs.ini
@@ -234,7 +234,7 @@ pocketmine.server.info.extended = 此服务器正在运作 {%0} {%1} “{%2}” 
 pocketmine.server.info.extended1 = 本服务器正运行 {%0}{%1} ({%2}) (代号 "{%3}")
 pocketmine.server.info.extended2 = PHP 版本: {%0}
 pocketmine.server.info.extended3 = API: {%0}
-pocketmine.server.info.extended4 = 客户端: Minecraft PE {%0}
+pocketmine.server.info.extended4 = 客户端: Minecraft {%0}
 pocketmine.server.info.extended5 = 协议版本: {%0}
 
 pocketmine.server.license = {%0} 根据 LGPL 许可发布
