--- a/src/pocketmine/lang/locale/eng.ini
+++ b/src/pocketmine/lang/locale/eng.ini
@@ -204,7 +204,7 @@ pocketmine.server.info.extended.title = -----Server information-----
 pocketmine.server.info.extended1 = This server is running {%0}{%1} ({%2}) {%3}
 pocketmine.server.info.extended2 = PHP version: {%0}
 pocketmine.server.info.extended3 = API: {%0}
-pocketmine.server.info.extended4 = Target client: Minecraft PE {%0}
+pocketmine.server.info.extended4 = Target client: Minecraft {%0}
 pocketmine.server.info.extended5 = Protocol version: {%0}
 
 pocketmine.server.license = {%0} is distributed under the GPL License version 3 and later
