--- a/src/pocketmine/lang/locale/jpn.ini
+++ b/src/pocketmine/lang/locale/jpn.ini
@@ -233,7 +233,7 @@ pocketmine.server.info.extended.title = -----サーバーの情報-----
 pocketmine.server.info.extended1 = このサーバーは {%0}{%1} ({%2}) を実行しています (コードネーム "{%3}")
 pocketmine.server.info.extended2 = PHPバージョン: {%0}
 pocketmine.server.info.extended3 = API: {%0}
-pocketmine.server.info.extended4 = 目的のクライアント: Minecraft PE {%0} (プロトコルバージョン {%1})
+pocketmine.server.info.extended4 = 目的のクライアント: Minecraft {%0} (プロトコルバージョン {%1})
 
 pocketmine.server.license = {%0}はLGPLライセンスに基づき配布されています
 pocketmine.server.tickOverload = 注意！ サーバーが高負荷になっている可能性があります
