--- a/src/pocketmine/lang/locale/kor.ini
+++ b/src/pocketmine/lang/locale/kor.ini
@@ -240,7 +240,7 @@ pocketmine.server.info.extended.title = -----서버 정보-----
 pocketmine.server.info.extended1 = 이 서버는 {%0}{%1} ({%2}) (코드네임 "{%3}")을 구동 중입니다
 pocketmine.server.info.extended2 = PHP 버전: {%0}
 pocketmine.server.info.extended3 = API: {%0}
-pocketmine.server.info.extended4 = 대상 클라이언트: Minecraft PE {%0} (프로토콜 버전 {%1})
+pocketmine.server.info.extended4 = 대상 클라이언트: Minecraft {%0} (프로토콜 버전 {%1})
 
 pocketmine.server.license = {%0}은(는) LGPL 라이센스 하에서 배포됩니다
 pocketmine.server.tickOverload = 서버 처리 속도가 느려졌습니다. 서버가 과부하되었는지 확인해주시기 바랍니다.
